--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,9 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #382933;
+$secondary : #3B5249;
+$tertiary  : #519872;
+$quaternary: #A4B494;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
